Automatically add suffix in export alembic(.abc) and collada(.dae) #49111

Closed
opened 2016-08-19 02:48:58 +02:00 by Leroy · 6 comments

System Information
win7 sp1 64bit

Blender Version
Broken: 2.77.3 1fe9d67
Worked: (optional)

Can't automatically add suffix in export alembic(.abc) and collada(.dae), but export others format is works, sorry for my englsih, there are the gif to explain this :D

fbx:
fbx.gif

dae:
dae.gif

abc:
abc.gif

Exact steps for others to reproduce the error
just open blender, than file\export, and when you change the file name, the .abc and .dae can't auto complete the suffix. maybe this not a bug , but not convenient, thanks.

**System Information** win7 sp1 64bit **Blender Version** Broken: 2.77.3 1fe9d67 Worked: (optional) Can't automatically add suffix in export alembic(.abc) and collada(.dae), but export others format is works, sorry for my englsih, there are the gif to explain this :D fbx: ![fbx.gif](https://archive.blender.org/developer/F338896/fbx.gif) dae: ![dae.gif](https://archive.blender.org/developer/F338898/dae.gif) abc: ![abc.gif](https://archive.blender.org/developer/F338900/abc.gif) **Exact steps for others to reproduce the error** just open blender, than file\export, and when you change the file name, the .abc and .dae can't auto complete the suffix. maybe this not a bug , but not convenient, thanks.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Leroy-Xie

Added subscriber: @Leroy-Xie

This issue was referenced by bf4875001d

This issue was referenced by bf4875001de10d0053fc9377fa98349bd6e1e8a9

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich

Although it isn't really a bug, there was a tiny issue in the Alembic case. Anyway, I committed a fix, so thanks for the report!

Although it isn't really a bug, there was a tiny issue in the Alembic case. Anyway, I committed a fix, so thanks for the report!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49111
No description provided.